# rusticate

./: Cargo.toml  README.md  benchmark_results.csv  benchmark_results.json  benchmark_results.md  contigs.fasta  db.fasta  testdb.ndb  testdb.nhr  testdb.nin  testdb.njs  testdb.nsq
results/: report.html  results.json  results.tsv
src/: blast.rs  cli.rs  db.rs  fasta.rs  main.rs  report.rs
templates/: report.html.tera
tests/: integration.rs
