[package]
name = "rusticate"
version = "0.1.0"
edition = "2021"
authors = ["Shakil Rafi <sarafi@uark.edu>"]
description = "Rust-based reimplementation of abricate"
license = "MIT"
repository = "https://github.com/2shakilraf/rusticate"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"                # For gz support
rayon = "1.8"                 # Parallelism
tera = "1.19"                 # HTML templating
bio = "2.3"                   # rust-bio for fasta
thiserror = "1.0"             # Nice error messages
which = "5.0"                 # Check for makeblastdb
tempfile = "3.8"              # For temp dirs
walkdir = "2.4"               # For db file discovery
reqwest = { version = "0.11", features = ["blocking"] }
tar = "0.4"
bzip2 = "0.4"
dirs = "5.0"


[dev-dependencies]
assert_cmd = "2.0"

